--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "app.js",
     "author": "offline-dreamer",
     "license": "MIT",
+    "engines": { "node" : ">= 6.10.3" },
     "scripts": {
         "build": "npm install",
         "start": "node src/app.js"
