connects to blob

--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-    "name": "dreamview",
-    "version": "0.7.0",
-    "description": "Visiualization of the Apollo simulator.",
-    "main": "app.js",
-    "author": "offline-dreamer",
-    "license": "MIT",
-    "engines": { "node" : ">= 6.10.3" },
-    "scripts": {
-        "build": "npm install",
-        "start": "node src/app.js"
-    },
-    "dependencies": {
-        "async": "^2.6.0",
-        "body-parser": "^1.18.2",
-        "express": "^4.16.2",
-        "ws": "^3.3.1"
-    }
+  "name": "dreamview",
+  "version": "0.7.0",
+  "description": "Visiualization of the Apollo simulator.",
+  "main": "app.js",
+  "author": "offline-dreamer",
+  "license": "MIT",
+  "engines": {
+    "node": ">= 6.10.3"
+  },
+  "scripts": {
+    "build": "npm install",
+    "start": "node src/app.js"
+  },
+  "dependencies": {
+    "async": "^2.6.0",
+    "azure-storage": "^2.6.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "shelljs": "^0.7.8",
+    "ws": "^3.3.1"
+  }
 }
