--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "async": "^2.6.0",
-    "azure-storage": "^2.6.0",
+    //"azure-storage": "^2.6.0",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "express": "^4.16.2",
